# dstack

./: .gitignore  LIMITATIONS.md  README.md
governance/: FOUNDATION_IDENTITY_GOVERNANCE_PYRAMID.md  SOVEREIGNTY_FRAMEWORK_ACTS.md  SOVEREIGNTY_FRAMEWORK_REGULATIONS.md  UI_HUMAN_INTERFACE.md
sidecar/: README.md  pyproject.toml
sidecar/dstack_sidecar/: __init__.py  core.py  et_tu_brute.py  fractal_mem_cache.py  grounded_interface.py  storage.py
sidecar/examples/: basic_usage.py
skills/et_tu_brute/: SKILL.md
skills/et_tu_brute/reference/: bias-pattern-catalogue.md  map-discipline.md  naming-protocol.md  self-scan-procedure.md
skills/et_tu_brute/tools/: bias_scan.py
skills/fractal_mem_cache/: SKILL.md
skills/fractal_mem_cache/reference/: activation-gate.md  architecture.md  claude_mem-adapter.md  fractal-scales.md  promotion-rules.md  relational-layer.md
skills/grounded_interface/: SKILL.md
skills/grounded_interface/reference/: continuity-over-content.md  deprecation-discipline.md  phased-learning.md  relational-context.md  translation-loss.md
